--- a/css/sytle.css
+++ b/css/sytle.css
@@ -5,8 +5,9 @@
 
 
 *{margin: 0; padding: 0; box-sizing: border-box;}
-ul,li{list-style: none;}
+ul,li{list-style: none; padding: 0;}
 a{text-decoration: none; color: inherit;}
+img{border: none;}
 .clearfix::after{
     content: "";
     display: block;
@@ -17,8 +18,11 @@ html{
 }
 body{
     font-family: 'Hahmlet', serif;
+    line-height: 1px;
 }
-
+.blind{
+    position: absolute; top: -9999px; left: -9999px;
+}
 /* header */
 .nav{
     margin: 0 auto;
@@ -29,8 +33,13 @@ body{
     background-color: #fff; 
     border-bottom: 1px solid rgb(178, 178, 178);
 }
+.navSns li a:hover{
+    color: orange;
+}
+
 h1{
     overflow: hidden;
+    text-indent: -9999px;
 }
 h1 a{
     margin-top: 5px;
@@ -41,7 +50,7 @@ h1 a{
     overflow: hidden;
 }
 h1 a{
-    background: url(../img/logo2.jpg) center/contain no-repeat;
+    background: url(../img/giflogo.gif) center/contain no-repeat;
 }
 #video{
     margin: 20px auto;
@@ -50,6 +59,19 @@ h1 a{
     width: 1000px;
     height: 500px;
     border: 1px solid #ddd;
+    margin: 0 auto;
+}
+.navSns {
+    width: 250px;
+    height: 110px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: 1.5rem;
+    color: #777;
+    line-height: 20px;
+    align-items: center;
+    font-family: 'Noto Serif KR', serif;
 }
 
 /* 개인 사이트 */
@@ -143,7 +165,7 @@ h1 a{
     overflow: hidden;
 }
 .ques3{
-    margin-bottom: 60px;
+    margin-bottom: 50px;
 }
 .ques1 h3, .ques2 h3, .ques3 h3{
     font-size: 2.6rem;
@@ -161,7 +183,7 @@ h1 a{
     position: absolute;
     top: 180px;
     border-radius: 40px;
-    background-color: rgb(86, 86, 192);
+    background-color: rgb(109, 109, 207);
     transition: all 0.3s;
 }
 .ans{
@@ -192,7 +214,7 @@ h1 a{
     margin-bottom: 15px;
     font-weight: 400;
 }
-.quemore span{
+.quemore form{
     text-align: center;
 }
 .quemore img{
@@ -250,6 +272,12 @@ input[type=submit]{
 }
 .baseball{
     background: url(../img/sl.jpg) no-repeat center/cover;
+}
+.baseball:hover,
+.conan:hover,
+.itzy:hover{
+    transform: translateY(-11px);
+    transition: all 0.4s;
 }
 .conText{
     height: 390px;
@@ -342,6 +370,9 @@ footer{
     font-size: 2.4rem;
     line-height: 24px;
     margin-bottom: 20px;
+}
+.fContent li img{
+    width: 22px;
 }
 .fSite{
     width: 150px;
